--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,4 @@
-/* body {
-    color: #222;
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    margin-left: 150px;
-    padding: 0;
-    position: relative;
-    padding-bottom: 100px;
-    background: linear-gradient(to bottom, #ffffff, #141414); 
-} */
+
 
 nav.sidebar {
     font-family: 'Montserrat', sans-serif;
@@ -53,23 +44,41 @@ nav.sidebar h1 {
     color: rgb(101, 171, 250);
 }
 
-/* main {
-    width: 800px;
+main {
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: center;
     margin: auto;
-    margin-top: 20px;
-    min-height: 100vh;
-} */
+    margin-top: 10px;
+    margin-left: 135px;
+    padding-bottom: 10px;
+} 
+
+.home_title{
+    text-align: center;
+}
+
+.greeting_post{
+    height: 275px;
+    width: 550px;
+    border: 2px solid rgb(0, 0, 85);
+}
+.greeting_description{
+    width: 50%;
+    text-align: center;
+}
+.posts{
+display: flex;
+justify-content: center;
+}
 
 footer {
     width: 100%;
     padding: 0;
     margin: 0;
-    margin-left: 125px;
-    height: 40px;
+    margin-left: 150px;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
