--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
-
-
+body {
+    margin: 0;
+}
 nav.sidebar {
     font-family: 'Montserrat', sans-serif;
     width: 20%;
@@ -46,22 +47,29 @@ nav.sidebar h1 {
 
 main {
     font-family: 'Montserrat', sans-serif;
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: center;
-    margin: auto;
     margin-top: 10px;
-    margin-left: 135px;
+    margin-left: 20%;
     padding-bottom: 10px;
 } 
 
+.greeting{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .home_title{
     text-align: center;
+    color: rgb(11, 11, 97);
 }
 
 .greeting_post{
     height: 275px;
-    width: 550px;
+    width: 100%;
     border: 2px solid rgb(0, 0, 85);
 }
 .greeting_description{
@@ -69,22 +77,110 @@ main {
     text-align: center;
 }
 .posts{
-display: flex;
-justify-content: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.new_post{
+    font-weight: 700;
+    background: rgb(255, 255, 255);
+    margin: 20px 0;
+    padding: 5px 5px;
+    color: rgb(11, 28, 85);
+    border: 2px solid rgb(8, 24, 95);
+
+}
+
+form {
+    width: 75%;
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+form label {
+    display: flex;
+    flex-direction: column;
+    margin: 5px 0;
+    width: 75%;
+    text-align: center;
+}
+
+form input {
+    width: 75%;
+    border: 1px solid #525252;
+    padding: 10px;
+    margin: 10px 0;
+    max-width: 700px;
 }
 
 footer {
-    width: 100%;
+    width: 80%;
     padding: 0;
     margin: 0;
-    margin-left: 150px;
+    margin-left: 20%;
     height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     align-content: center;
     color: black;
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    left: 0
+    left: 0;
+    background: white;
+    border-top: 2px solid rgb(7, 7, 88);
+}
+
+
+/* CSS FOR CARDS */
+
+div#content {
+    width: 80%;
+    margin-left: 20%;
+    text-align: center;
+}
+
+div#items {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin-top: 50px;
+}
+
+div.post {
+    border: 2px solid #2e2e2e;
+    border-radius: 10px;
+    width: 200px;
+    height: 200px;
+    margin: 30px;
+    -webkit-box-shadow: 8px 2px 14px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 8px 2px 14px -2px rgba(0,0,0,0.75);
+    box-shadow: 8px 2px 14px -2px rgba(0,0,0,0.75);
+}
+
+div.post img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+div.post-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 50px;
+}
+
+div.post-content a {
+    color: #000000;
+    font-weight: bold;
+    text-decoration: none;
+    align-self: center;
 }
