--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav class="sidebar">
-            <h1 href="/">Home</h1>
+            <h1><a href="/">Home</a></h1>
                 <div class="sidebar_items">
                     <h3>Art Types</h3>
                     <a>Abstract</a>
@@ -15,7 +15,7 @@
                     <a>Landscape</a>
                     <a>Portrait</a>
                 </div>
-            <h1 href="/about">About</h1>
+            <h1><a href="/about">About</a></h1>
         </nav>
 
         {% block content %}{% endblock %}
