--- a/static/style.css
+++ b/static/style.css
@@ -69,7 +69,7 @@ main {
 
 .greeting_post{
     height: 275px;
-    width: 100%;
+    width: 75%;
     border: 2px solid rgb(0, 0, 85);
 }
 .greeting_description{
@@ -154,7 +154,6 @@ div#items {
 
 div.post {
     border: 2px solid #2e2e2e;
-    border-radius: 10px;
     width: 200px;
     height: 200px;
     margin: 30px;
@@ -167,8 +166,6 @@ div.post img {
     width: 100%;
     height: 150px;
     object-fit: cover;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
 }
 
 div.post-content {
@@ -183,4 +180,19 @@ div.post-content a {
     font-weight: bold;
     text-decoration: none;
     align-self: center;
+}
+
+
+/* CSS FOR THE ABOUT PAGE */
+.content{
+    margin-top: 50px;
+    border: 2px solid rgb(9, 9, 80);
+    font-size: 22pt;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    -webkit-box-shadow: 8px 2px 14px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 8px 2px 14px -2px rgba(0,0,0,0.75);
+    box-shadow: 8px 2px 14px -2px rgba(0,0,0,0.75);
 }
