Fixed stying for the form to create a new post

--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -3,7 +3,7 @@
 
 <main>
     <form method='POST'>
-            <legend><h1>What kind of creation do you have today??</h1></legend>
+            <legend><h1>What kind of creation would you like to show?</h1></legend>
 
             <label>
                 Post Title:
