--- a/static/style.css
+++ b/static/style.css
@@ -99,10 +99,13 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: rgb(8, 8, 88);
     
 }
 
 form label {
+    font-size: 14pt;
+    font-weight: bolder;
     display: flex;
     flex-direction: column;
     margin: 5px 0;
@@ -111,11 +114,16 @@ form label {
 }
 
 form input {
-    width: 75%;
-    border: 1px solid #525252;
+    width: 60%;
+    border: 3px solid #070c47;
     padding: 10px;
     margin: 10px 0;
     max-width: 700px;
+    text-align: center;
+}
+
+.submit{
+    width: 25%;
 }
 
 footer {
@@ -154,7 +162,7 @@ div#items {
 
 div.post {
     border: 2px solid #2e2e2e;
-    width: 200px;
+    width: 350px;
     height: 200px;
     margin: 30px;
     -webkit-box-shadow: 8px 2px 14px -2px rgba(0,0,0,0.75);
